fix typo in serverless.yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -34,7 +34,7 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: 'arn:dynamodb:ap-southeast-2:*:*'
+      Resource: 'arn:aws:dynamodb:ap-southeast-2:*:*'
 
 functions:
   hello:
